Fix Title and Subtitle HR alignment

--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,6 +1,8 @@
 @import '../../style/variable.css';
 
 .title {
+  display: flex;
+  flex-direction: column;
   margin-bottom: var(--marginLarge);
 }
 
